--- a/Assignments/StarterNotebook.ipynb
+++ b/Assignments/StarterNotebook.ipynb
@@ -8,8 +8,8 @@
         "---\n",
         "- M'hamed Hicham RAHIMI\n",
         "- Hamza MOUHIB\n",
-        "- Badr\n",
-        "- \n",
+        "- Badr Eddine LAALOU\n",
+        "  \n",
         "python version: 3.12.11 + Last pandas, numpy, seaborn, sklearn, xgboost, matplotlib, seaborn"
       ]
     },
@@ -7492,7 +7492,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.11"
+      "version": "3.11.13"
     }
   },
   "nbformat": 4,
